--- a/slider+textLink/index.html
+++ b/slider+textLink/index.html
@@ -11,8 +11,7 @@
 <body>
 
 <div class="wrapper">
-    <div id="slider" class="slider"></div>
-    <div id="slider2" class="slider"></div>
+    <div id="slider"></div>
 </div>
 
 <script src="index.ts"></script>
