--- a/animations/bubbles/index.html
+++ b/animations/bubbles/index.html
@@ -13,6 +13,7 @@
 <canvas id="canvas"></canvas>
 
 
-<script src="index.js"></script>
+<!--<script src="index.js"></script>-->
+<script src="newIndex.js"></script>
 </body>
 </html>
