updated animations project

--- a/animations/bubbles/index.html
+++ b/animations/bubbles/index.html
@@ -12,8 +12,6 @@
 
 <canvas id="canvas"></canvas>
 
-
-<!--<script src="index.js"></script>-->
-<script src="newIndex.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
