--- a/myCarousel/index.html
+++ b/myCarousel/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <link rel="stylesheet" href="style.css">
-    <title>My Carousel</title>
+  <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
+  <link rel="stylesheet" href="style.scss">
+  <title>My Carousel</title>
 
 </head>
 <body>
@@ -17,41 +17,36 @@
 
 <div class="container">
 
-    <div id="carousel">
-        <div class="carousel-items" id="carousel-items">
-            <div class="carousel-item">
-                <img src="img/1.jpg" alt="">
-            </div>
-            <div class="carousel-item">
-                <img src="img/2.jpg" alt="">
-            </div>
-            <div class="carousel-item">
-                <img src="img/3.jpg" alt="">
-            </div>
-            <div class="carousel-item">
-                <img src="img/4.jpg" alt="">
-            </div>
-            <div class="carousel-item">
-                <img src="img/5.jpg" alt="">
-            </div>
-            <div class="carousel-item">
-                <img src="img/6.jpg" alt="">
-            </div>
-        </div>
-
-        <div class="navigation">
-            <button id="prev-button" class="waves-effect btn-floating waves-light">
-                <i class="material-icons left">chevron_left</i>
-            </button>
-            <button id="next-button" class="waves-effect btn-floating waves-light">
-                <i class="material-icons right">chevron_right</i>
-            </button>
-        </div>
+  <div id="crsl">
+    <div class="crsl-wrapper" id="crsl-wrapper">
+      <div class="crsl-item"><img src="img/1.jpg" alt=""></div>
+      <div class="crsl-item"><img src="img/2.jpg" alt=""></div>
+      <div class="crsl-item"><img src="img/3.jpg" alt=""></div>
+      <div class="crsl-item"><img src="img/4.jpg" alt=""></div>
+      <div class="crsl-item"><img src="img/5.jpg" alt=""></div>
+      <div class="crsl-item"><img src="img/6.jpg" alt=""></div>
+      <div class="crsl-item"><img src="img/7.jpg" alt=""></div>
+      <div class="crsl-item"><img src="img/8.jpg" alt=""></div>
+      <div class="crsl-item"><img src="img/9.jpg" alt=""></div>
+      <div class="crsl-item"><img src="img/10.jpg" alt=""></div>
+      <div class="crsl-item"><img src="img/11.jpg" alt=""></div>
     </div>
+
+    <!--  Add navigation  -->
+    <div class="crsl-navigation">
+      <button id="crsl-button-prev" class="waves-effect btn-floating waves-light">
+        <i class="material-icons left">chevron_left</i>
+      </button>
+      <button id="crsl-button-next" class="waves-effect btn-floating waves-light">
+        <i class="material-icons right">chevron_right</i>
+      </button>
+    </div>
+    <!--  Add pagination  -->
+  </div>
 
 
 </div>
 
-<script src="script.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
