--- a/WGtest/index.html
+++ b/WGtest/index.html
@@ -31,14 +31,14 @@
       </ul>
     </div>
 
-    <div class="progress">
+    <div class="progress" id="progress-wrap">
       <div id="progress-bar"
-           class="progress-bar bg-info progress-bar-striped progress-bar-animated"
+           class="progress-bar bg-info progress-bar-striped"
            role="progressbar"
-           style="width: 25%;"
-           aria-valuenow="25"
+           style="width: 0"
+           aria-valuenow="0"
            aria-valuemin="0"
-           aria-valuemax="100">25%</div>
+           aria-valuemax="100">0%</div>
     </div>
   </div>
 
