--- a/WGtest/index.html
+++ b/WGtest/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
   <title>Homework</title>
 </head>
 <body>
@@ -36,7 +36,6 @@
            class="progress-bar bg-info progress-bar-striped"
            role="progressbar"
            style="width: 0"
-           aria-valuenow="0"
            aria-valuemin="0"
            aria-valuemax="100">0%</div>
     </div>
